# timula

./: Cargo.toml  LICENSE  readme.md
src/: main.rs  text.rs
