[package]
version = "0.1.0"
name = "timula"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.2"
